@@ -2,6 +2,7 @@ Revision history for WebService-FogBugz
 
         - New Maintainer: Barbie.
         - aded META files as permanent files.
+        - updated Makefile.PL without Module-Install.
 
 0.05   Sat Feb  9 11:47:46 JST 2013
        - Start using git, Module::Install, 
